--- a/ios/marcopandaios/marcopandaios/Base.lproj/LaunchScreen.storyboard
+++ b/ios/marcopandaios/marcopandaios/Base.lproj/LaunchScreen.storyboard
@@ -17,19 +17,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="splash" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gUj-ex-uen">
-                                <frame key="frameInset" minX="139" minY="318" width="97" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sp" translatesAutoresizingMaskIntoConstraints="NO" id="ZJg-Hg-hau">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="197" id="GgI-Z4-rBk"/>
+                                    <constraint firstAttribute="width" constant="375" id="Pxk-0Z-mFd"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ZJg-Hg-hau" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="T0q-Ld-LxN"/>
+                            <constraint firstItem="ZJg-Hg-hau" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="UN1-Wg-KP1"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="sp" width="770" height="554"/>
+    </resources>
 </document>
